--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,5 +1,9 @@
 body {
     font-family: Roboto;
+    background: #007991;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #78ffd6, #007991);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #78ffd6, #007991); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 h1 {
@@ -37,6 +41,7 @@ input {
     padding: 13px 13px 13px 20px;
     box-sizing: border-box;
     color: #2980b9;
+    border: 3px solid rgba(0, 0, 0, 0)
 }
 
 input:focus {
@@ -45,9 +50,26 @@ input:focus {
     outline: none;
 }
 
+li span {
+    background-color: #e74c3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    width: 0px;
+    display: inline-block;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover span {
+    width: 40px;
+    opacity: 1.0;
+}
+
 #container {
     border: 2px solid gray;
-    width: 360px;
+    width: 500px;
     margin: 100px auto;
     background-color: #f7f7f7;
     box-shadow: 0 0 3px rgba(0,0,0, 0.1);
@@ -56,4 +78,8 @@ input:focus {
 .completed {
     color: gray;
     text-decoration: line-through;
+}
+
+.fa-plus {
+    float: right;
 }
